--- a/public/css/common.css
+++ b/public/css/common.css
@@ -176,6 +176,9 @@ x    text-decoration: underline;
 .content-img{
     margin-right:10px;
 }
+.content h2{
+    font-size: 12pt;
+}
 .page-content{
     margin-top:10px;
 }
