Commit before refactoring

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -182,7 +182,7 @@ x    text-decoration: underline;
 .page-content{
     margin-top:10px;
 }
-#b-computer{
+/*#b-computer{
     display: none;
 }
 #b-elec{
@@ -196,7 +196,7 @@ x    text-decoration: underline;
 }
 #b-aero{
     display: none;
-}
+}*/
 /* end of academic*/
 .content{
 
